--- a/index.css
+++ b/index.css
@@ -192,7 +192,7 @@ form label {
   padding-left: 55px;
   padding-right: 20px;
   margin-bottom: 20px;
-  background-image: url(https://habrastorage.org/webt/nh/ec/w_/nhecw_rg6-ph-dkfzqx2asagecy.png);
+  background-image: url(search.svg);
   background-repeat: no-repeat;
   background-position: 20px center;
   outline: none;
