--- a/index.css
+++ b/index.css
@@ -133,6 +133,24 @@ form label {
   margin-bottom: 10px;
 }
 
+.photos {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  margin-top: 10px;
+}
+
+.photos li {
+  margin-right: 20px;
+}
+
+.photos img {
+  border-radius: 4px;
+  max-width: 100%;
+  width: 150px;
+}
+
 #header {
   margin-bottom: 40px;
   display: grid;
